Fixed text wrap display bug

--- a/src/components/graphs/pagination/Pagination.less
+++ b/src/components/graphs/pagination/Pagination.less
@@ -23,6 +23,10 @@
         line-height: 46px;
         font-size: 14px;
         color: #1890ff;
+        min-width: 10rem;
+        @media screen and (max-width: 880px) {
+          min-width: 0;
+        }
         .icon {
           margin: 0 auto;
           margin-right: 10px;
